--- a/tsconfig.json
+++ b/tsconfig.json
@@ -62,5 +62,5 @@
     // "declarationDir": "lib"                /* Output directory for generated declaration files. */
   },
 
-  "exclude": [ "node_modules", "src/**/*.spec.ts", "lib" ]
+  "exclude": [ "node_modules", "lib" ]
 }
