--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "scripts": {
     "build": "npm-run-all lint test clean build:rollup",
     "build:rollup": "rollup -c",
+    "dev": "ts-node src/index.ts",
     "clean": "rimraf lib",
     "lint": "tsc --noEmit && eslint ./src ./tests --ext .ts",
-    "test": "mocha -r ts-node/register tests/**/*.spec.ts"
+    "test": "mocha -r ts-node/register tests/**/*.spec.ts",
+    "watch": "nodemon --exec \"npm-run-all lint dev\" --watch ./src --ext .ts"
   },
   "author": "Kyle Stankovich",
   "license": "GPL-3.0-or-later",
@@ -23,6 +25,7 @@
     "chai": "^4.2.0",
     "eslint": "^6.8.0",
     "mocha": "^7.0.1",
+    "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.0",
     "rollup": "^1.29.1",
