--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "scripts": {
     "build": "npm-run-all lint test clean build:rollup",
     "build:rollup": "rollup -c",
-    "dev": "ts-node src/index.ts",
+    "docs": "typedoc --json ./src",
     "clean": "rimraf lib",
+    "dev": "ts-node src/index.ts",
     "lint": "tsc --noEmit && eslint ./src ./tests --ext .ts",
     "test": "mocha -r ts-node/register tests/**/*.spec.ts",
     "watch": "nodemon --exec \"npm-run-all lint dev\" --watch ./src --ext .ts"
@@ -34,6 +35,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-typescript2": "^0.25.3",
     "ts-node": "^8.6.2",
+    "typedoc": "^0.16.9",
     "typescript": "^3.7.5"
   }
 }
