Added .nojekyll to docs directory; modifed package.json to do this automatically.

--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "module": "./lib/index.es.js",
   "typings": "./lib/index.d.ts",
   "scripts": {
-    "build": "npm-run-all lint test clean build:rollup",
+    "build": "npm-run-all lint test clean:lib build:rollup",
     "build:rollup": "rollup -c",
-    "docs": "typedoc --json ./src",
-    "clean": "rimraf lib",
+    "clean:lib": "rimraf ./lib",
+    "clean:docs": "rimraf ./docs",
+    "docs": "npm-run-all clean:docs docs:generate",
+    "docs:generate": "typedoc --json ./src && touch ./docs/.nojekyll",
     "dev": "ts-node src/index.ts",
     "lint": "tsc --noEmit && eslint ./src ./tests --ext .ts",
     "test": "mocha -r ts-node/register tests/**/*.spec.ts",
