--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "module": "./lib/index.es.js",
   "typings": "./lib/index.d.ts",
   "scripts": {
-    "build": "npm-run-all lint test clean:lib build:rollup",
+    "build": "npm-run-all lint test clean:lib build:rollup docs",
     "build:rollup": "rollup -c",
     "clean:lib": "rimraf ./lib",
     "clean:docs": "rimraf ./docs",
